Fixes navbar z-index

--- a/packages/client/src/layout/network-widget.scss
+++ b/packages/client/src/layout/network-widget.scss
@@ -272,12 +272,6 @@
     width: 170px;
   }
 
-  .network-widget.open {
-    .network-widget-button {
-      width: 160px;
-    }
-  }
-
   .network-widget-info {
     margin-top: 52px;
   }
