--- a/packages/client/src/layout/sidebar.scss
+++ b/packages/client/src/layout/sidebar.scss
@@ -6,6 +6,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .sidebar-logo {
